# npb-ticket-scraper

./: .gitignore  README.md  pyproject.toml
docs/: decisions.md
docs/temp/: pr-body.md
scripts/: poc_hanshin.py
src/npb_ticket_scraper/: __init__.py  fetcher.py  models.py  repository.py  schema.sql  sqlite_repository.py
src/npb_ticket_scraper/adapters/: __init__.py  base.py  hanshin.py
tests/: test_hanshin_adapter.py  test_sqlite_repository.py
